# MoonFang

./: asd  cmake-cmd.sh  colors.py  flake.nix  nohup.out  notesAndThingsToHave.txt  pTestMove  pbar.py  shell._nix  sigwinch  test  testMove  weirdChar
src/: CMakeLists.txt
src/cmake/: FindPango.cmake
src/include/: ApplicationWindow.h  Color.h  Cursor.h  MFChar.h  PT.h  SubToken.h  Terminal.h  Token.h
src/include/Graphics/: Canvas.h  CoreXFTDraw.h  XFTColors.h
src/include/Graphics/CairoPango/: Canvas_CairoPango.h
src/include/Graphics/Xft/: Canvas_Xft.h
src/include/SubToken/: CSI.h  OSC.h  UTF8.h
src/src/: ApplicationWindow.cpp  Cursor.cpp  MFChar.cpp  PT.cpp  SubToken.cpp  Terminal.cpp  Token.cpp  main.cpp
src/src/Graphics/: CoreXFTDraw.cpp  XFTColors.cpp
src/src/Graphics/CairoPango/: Canvas_CairoPango.cpp
src/src/Graphics/Xft/: Canvas_Xft.cpp
src/src/SubToken/: CSI.cpp  OSC.cpp  UTF8.cpp
tests/ZChess/: chess  chess.deps.json
tests/ZChess/Graphics/: bishop-sc-bg.ppm  bishop1-sc-bg.ppm  black-win.ppm  board.ppm  king-sc-bg.ppm  king1-sc-bg.ppm  knight-sc-bg.ppm  knight1-sc-bg.ppm  menu-play.ppm  (+17 more)
tests/ncurses/: Makefile  back_ground  background  bgLaZZe  bgLaZZe.c  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  config.status  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  dots_xcurses  dup_field  echochar  extended_color  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  (+45 more)
